force-app/main/default/objects/sf_Application_Section__c/sf_Application_Section__c.object-meta.xml
<CustomObject>
    <label>Application Section</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Application Section Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>