force-app/main/default/objects/sf_Application_Section__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>