force-app/main/default/objects/sf_Application_Section__c/fields/Display_Section_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Section_Label__c</fullName>
    <label>Display Section Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>