force-app/main/default/objects/sf_Application_Section__c/fields/sf_Application__c.field-meta.xml
<CustomField>
    <fullName>sf_Application__c</fullName>
    <label>Application</label>
    <referenceTo>sf_Application__c</referenceTo>
    <relationshipLabel>Application Sections</relationshipLabel>
    <relationshipName>Application_Sections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>