force-app/main/default/objects/sf_Application_Section__c/fields/sf_Ref_Application_Section__c.field-meta.xml
<CustomField>
    <fullName>sf_Ref_Application_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Application Section</label>
    <referenceTo>sf_Ref_Application_Section__c</referenceTo>
    <relationshipLabel>Application Sections</relationshipLabel>
    <relationshipName>Application_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>